force-app/main/default/objects/Financial_Logs__c/Financial_Logs__c.object-meta.xml
<CustomObject>
    <label>Financial Logs</label>
    <nameField>
        <label>Financial Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>