force-app/main/default/objects/Financial_Logs__c/fields/Advice_Date__c.field-meta.xml
<CustomField>
    <fullName>Advice_Date__c</fullName>
    <label>Advice Date</label>
    <type>DateTime</type>
</CustomField>