force-app/main/default/objects/Financial_Logs__c/fields/Financial_Period__c.field-meta.xml
<CustomField>
    <fullName>Financial_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Period</label>
    <referenceTo>Financial_Period__c</referenceTo>
    <relationshipLabel>Financial Logs</relationshipLabel>
    <relationshipName>Financial_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>