force-app/main/default/objects/Financial_Logs__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Financial Logs</relationshipLabel>
    <relationshipName>Financial_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>